Admin Chat Prototype

--- a/MVCPrototypeChat/Content/bootstrap.css
+++ b/MVCPrototypeChat/Content/bootstrap.css
@@ -761,6 +761,7 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  max-width:950px;
 }
 
 .container:before,
@@ -4928,13 +4929,13 @@ a.list-group-item.active > .badge,
 }
 
 .jumbotron {
-  padding: 30px;
+  padding-top: 20px;
   margin-bottom: 30px;
   font-size: 21px;
   font-weight: 200;
   line-height: 2.1428571435;
   color: inherit;
-  background-color: #eeeeee;
+  background-color:transparent;
 }
 
 .jumbotron h1 {
@@ -4952,8 +4953,8 @@ a.list-group-item.active > .badge,
 
 @media screen and (min-width: 768px) {
   .jumbotron {
-    padding-top: 48px;
-    padding-bottom: 48px;
+    padding-top: 20px;
+    padding-bottom: 30px;
   }
   .container .jumbotron {
     padding-right: 60px;
